--- a/public/terms.html
+++ b/public/terms.html
@@ -1,23 +1,114 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <title>Hizmet Şartları - Diyet Pusulası</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>body { font-family: sans-serif; max-width: 800px; margin: 0 auto; padding: 20px; line-height: 1.6; } h1, h2 { color: #008080; } .disclaimer { border: 2px solid #ea4335; padding: 15px; background-color: #ffeaea; border-radius: 5px; font-weight: bold; margin-bottom: 20px; }</style>
-</head>
-<body>
-    <h1>Diyet Pusulası Hizmet Şartları</h1>
-    <p>Son Güncelleme: 14 Kasım 2025</p>
+    <meta charset="UTF-8" />
+    <title>Hizmet Şartları – Diyet Pusulası</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <h2>1. İşletmeci Bilgileri ve Sözleşme Tarafları</h2>
-    <p>Bu hizmet şartları, Hizmet Sağlayıcı olan **Emre Cansever** (bundan böyle "İşletmeci" olarak anılacaktır) ile uygulamayı kullanan gerçek kişi/kuruluş ("Kullanıcı") arasında akdedilmiştir. "Diyet Pusulası" markası, İşletmeci'nin mülkiyetindedir.</p>
+    <style>
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            max-width: 900px;
+            margin: 0 auto;
+            padding: 24px;
+            line-height: 1.7;
+            color: #222;
+            background-color: #ffffff;
+        }
+
+        h1 {
+            color: #006d6d;
+            margin-bottom: 8px;
+        }
+
+        h2 {
+            color: #008080;
+            margin-top: 32px;
+        }
+
+        p {
+            margin: 12px 0;
+        }
+
+        .meta {
+            font-size: 0.9rem;
+            color: #666;
+            margin-bottom: 24px;
+        }
+
+        .disclaimer {
+            border: 2px solid #d93025;
+            background-color: #fff0f0;
+            padding: 16px;
+            border-radius: 6px;
+            font-weight: 600;
+            color: #b00000;
+            margin: 24px 0;
+        }
+
+        a {
+            color: #008080;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+
+<body>
+
+    <h1>Diyet Pusulası Hizmet Şartları</h1>
+    <div class="meta">Son Güncelleme: 14 Kasım 2025</div>
+
+    <h2>1. Taraflar ve Genel Bilgiler</h2>
+    <p>
+        Bu Hizmet Şartları, Diyet Pusulası mobil uygulamasını işleten
+        <strong>Emre Cansever</strong> (bundan sonra “İşletmeci” olarak anılacaktır)
+        ile uygulamayı kullanan gerçek veya tüzel kişi (“Kullanıcı”) arasında geçerlidir.
+    </p>
+    <p>
+        Diyet Pusulası uygulaması ve ilgili tüm içerikler, İşletmeci’ye aittir.
+        Uygulamayı kullanan herkes bu şartları kabul etmiş sayılır.
+    </p>
 
     <h2>2. Tıbbi Feragatname ve Sorumluluk Reddi</h2>
+
     <div class="disclaimer">
-        ÖNEMLİ UYARI: Diyet Pusulası, Yapay Zeka destekli analizler dahil, tıbbi tavsiye, teşhis veya tedavi önerisi DEĞİLDİR.
+        ÖNEMLİ UYARI: Diyet Pusulası; yapay zeka destekli analizler, öneriler ve
+        bilgilendirmeler dahil olmak üzere hiçbir şekilde tıbbi tavsiye,
+        teşhis veya tedavi sunmaz.
     </div>
-    
-    <h2>3. Abonelik ve İade Koşulları</h2>
-    <p>Abonelikler Paddle üzerinden yönetilir. İade koşulları, ayrı bir İade Politikası sayfasında belirtilmiştir.</p>
+
+    <p>
+        Uygulama içerisinde yer alan bilgiler yalnızca genel bilgilendirme
+        ve kişisel takip amaçlıdır. Sağlıkla ilgili herhangi bir karar almadan
+        önce mutlaka bir sağlık uzmanına danışmanız önerilir.
+    </p>
+    <p>
+        İşletmeci, uygulama üzerinden sunulan bilgilerin kullanılmasından
+        doğabilecek doğrudan veya dolaylı zararlardan sorumlu tutulamaz.
+    </p>
+
+    <h2>3. Abonelik, Ödeme ve İade Koşulları</h2>
+    <p>
+        Diyet Pusulası uygulamasında sunulan abonelikler üçüncü taraf ödeme
+        sağlayıcıları aracılığıyla yönetilebilir.
+    </p>
+    <p>
+        İade ve iptal koşulları, ilgili platformların ve ayrı bir
+        <strong>İade Politikası</strong> sayfasında belirtilen kurallara tabidir.
+    </p>
+
+    <h2>4. İletişim</h2>
+    <p>
+        Hizmet Şartları veya uygulama ile ilgili her türlü soru ve talebiniz için
+        aşağıdaki e-posta adresi üzerinden bizimle iletişime geçebilirsiniz:
+    </p>
+    <p>
+        📧 <a href="mailto:emreecansever@gmail.com">emreecansever@gmail.com</a>
+    </p>
+
 </body>
 </html>
